// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Types if 1`] = `
Object {
  "body": Array [
    Object {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "literal",
    "type": "bool",
    "value": false,
  },
  "else": Array [
    Object {
      "kind": "identifier",
      "name": "b",
    },
  ],
  "kind": "if",
}
`;

exports[`Types if-else 1`] = `
Object {
  "body": Array [
    Object {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "literal",
    "type": "bool",
    "value": false,
  },
  "else": Object {
    "body": Array [
      ParseNode {
        "kind": "literal",
        "type": "int",
        "value": 23,
      },
    ],
    "condition": ParseNode {
      "kind": "literal",
      "type": "bool",
      "value": false,
    },
    "else": Array [
      ParseNode {
        "kind": "literal",
        "type": "str",
        "value": "yay",
      },
    ],
    "kind": "if",
  },
  "kind": "if",
}
`;

exports[`Types if-else with boolean 1`] = `
Object {
  "body": Array [
    Object {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": Object {
      "kind": "identifier",
      "name": "a",
    },
    "operator": "==",
    "right": Object {
      "kind": "identifier",
      "name": "b",
    },
  },
  "else": Object {
    "body": Array [
      ParseNode {
        "kind": "literal",
        "type": "int",
        "value": 23,
      },
    ],
    "condition": ParseNode {
      "kind": "binary",
      "left": Object {
        "kind": "identifier",
        "name": "b",
      },
      "operator": "==",
      "right": Object {
        "kind": "identifier",
        "name": "c",
      },
    },
    "else": Array [
      ParseNode {
        "kind": "literal",
        "type": "str",
        "value": "hello",
      },
    ],
    "kind": "if",
  },
  "kind": "if",
}
`;

exports[`Types if-else-if 1`] = `
Object {
  "body": Array [
    Object {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": Object {
      "kind": "identifier",
      "name": "a",
    },
    "operator": "==",
    "right": Object {
      "kind": "identifier",
      "name": "b",
    },
  },
  "else": Array [
    Object {
      "kind": "identifier",
      "name": "b",
    },
  ],
  "kind": "if",
}
`;

exports[`Types if-else-if with boolean 1`] = `
Object {
  "body": Array [
    ParseNode {
      "kind": "assign",
      "left": Object {
        "kind": "identifier",
        "name": "a",
      },
      "operator": "=",
      "right": ParseNode {
        "kind": "binary",
        "left": Object {
          "kind": "identifier",
          "name": "a",
        },
        "operator": "+",
        "right": ParseNode {
          "kind": "literal",
          "type": "int",
          "value": 2,
        },
      },
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": Object {
      "kind": "identifier",
      "name": "a",
    },
    "operator": "==",
    "right": Object {
      "kind": "identifier",
      "name": "b",
    },
  },
  "kind": "while",
}
`;

exports[`Types while 1`] = `
Object {
  "identifier": "x",
  "kind": "let",
  "value": ParseNode {
    "kind": "literal",
    "type": "int",
    "value": 0,
  },
}
`;

exports[`Types while 2`] = `
Object {
  "body": Array [
    ParseNode {
      "kind": "assign",
      "left": Object {
        "kind": "identifier",
        "name": "x",
      },
      "operator": "=",
      "right": ParseNode {
        "kind": "binary",
        "left": Object {
          "kind": "identifier",
          "name": "x",
        },
        "operator": "+",
        "right": ParseNode {
          "kind": "literal",
          "type": "int",
          "value": 1,
        },
      },
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": Object {
      "kind": "identifier",
      "name": "x",
    },
    "operator": "<",
    "right": ParseNode {
      "kind": "literal",
      "type": "int",
      "value": 10,
    },
  },
  "kind": "while",
}
`;
